# bareshelf.recipes

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.buildkite/: pipeline.yml
admin/: .dockerignore  .gitignore  Dockerfile  Makefile  app.py  pyproject.toml  run.sh  scrapy.cfg  setup.cfg
admin/bareshelf_admin/: application.py  commands.py  gunicorn.py  indexer.py  models.py  test.db  views.py
admin/bareshelf_admin/crawler/: middlewares.py  pipelines.py  settings.py
admin/bareshelf_admin/crawler/spiders/: bbc.py
admin/migrations/versions/: 0e04296319d3_initial_migration.py  0ecdc0bc8ed6_add_timestamp_fields.py  46b1bd044f5f_initial_migration.py  5ccbad865613_add_tags_model.py  5d13d1da8b65_add_recipe_image_field.py  8850f2aeafb5_add_recipe_chef_name.py  9140ca40ba43_add_url_fields.py  c7eccf73b3f1_initial_migration.py  c9da43bf4dcc_initial_migration.py  fc8694aff96f_add_initial_tags.py
bareshelf/: Cargo.toml  README.md
bareshelf/src/: datatypes.rs  error.rs  indexer.rs  lib.rs  main.rs  next_ingredient.rs  searcher.rs
bareshelf_indexer/: Cargo.toml
bareshelf_indexer/src/: lib.rs
bareshelf_web/: Cargo.toml
bareshelf_web/src/: error.rs  flash.rs  lib.rs  main.rs  routes.rs  sharing.rs  shelf.rs  views.rs
bareshelf_web/templates/: base.html  index.html  ingredients.html  macros.html  nav-links.html  share-shelf.html  ui2.html  ui3.html
bareshelf_web/templates/includes/: nav-links.html
config/: local-nginx.conf
indexer/: Cargo.toml
search/: Cargo.toml
search/src/: lib.rs  main.rs
