[package]
name = "bareshelf_indexer"
version = "0.1.0"
authors = ["Rob Young <rob@robyoung.digital>"]
edition = "2018"

[lib]
name = "bareshelf_indexer"
crate-type = ["cdylib"]

[dependencies]
tantivy = "0.18.1"
bareshelf = { path = "../bareshelf" }
pyo3 = "0.17.3"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
