[package]
name = "bareshelf_web"
version = "0.1.0"
authors = ["Rob Young <rob@robyoung.digital>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-web-httpauth = "0.4"
actix-session = "0.3"
actix-service = "1.0"
actix-rt = "1.0"
base64 = "0.11"

env_logger = "0.7"
log = "0.4"

tera = "1.2"

serde = "1.0"
serde_json = "1.0"

url = "2.1"

bareshelf = { path = "../bareshelf" }

[features]
default = ["embedded_templates"]
embedded_templates = []
